--- a/.github/workflows/my-first-workflow.yaml
+++ b/.github/workflows/my-first-workflow.yaml
@@ -7,4 +7,4 @@ jobs:
       - name: Print Greetings
         run: echo "Hello world!"
       - name: Print Goodbye
-        run: echo "Goodbye!"
+        run: echo "Goodbye!!"
